@@ -1,6 +1,7 @@
 package org.apache.cayenne.query;
 
 import static java.util.Collections.singletonMap;
+import static org.junit.Assert.assertNotEquals;
 
 import org.apache.cayenne.DataRow;
 import org.apache.cayenne.ObjectContext;
@@ -9,6 +10,9 @@ import org.apache.cayenne.di.Inject;
 import org.apache.cayenne.test.jdbc.DBHelper;
 import org.apache.cayenne.test.jdbc.TableHelper;
 import org.apache.cayenne.testdo.testmap.Artist;
+import org.apache.cayenne.testdo.testmap.Painting;
+import org.apache.cayenne.unit.di.DataChannelInterceptor;
+import org.apache.cayenne.unit.di.UnitTestClosure;
 import org.apache.cayenne.unit.di.server.ServerCase;
 import org.apache.cayenne.unit.di.server.UseServerRuntime;
 
@@ -16,9 +20,12 @@ import org.apache.cayenne.unit.di.server.UseServerRuntime;
 public class SelectByIdTest extends ServerCase {
 
 	@Inject
-	protected DBHelper dbHelper;
+	private DataChannelInterceptor interceptor;
 
-	protected TableHelper tArtist;
+	@Inject
+	private DBHelper dbHelper;
+
+	private TableHelper tArtist;
 
 	@Inject
 	private ObjectContext context;
@@ -91,5 +98,78 @@ public class SelectByIdTest extends ServerCase {
 		DataRow a2 = SelectById.dataRowQuery(Artist.class, 2).selectOne(context);
 		assertNotNull(a2);
 		assertEquals("artist2", a2.get("ARTIST_NAME"));
+	}
+
+	public void testMetadataCacheKey() throws Exception {
+		SelectById<Painting> q1 = SelectById.query(Painting.class, 4);
+		QueryMetadata md1 = q1.getMetaData(context.getEntityResolver());
+		assertNotNull(md1);
+		assertNotNull(md1.getCacheKey());
+
+		SelectById<Painting> q2 = SelectById.query(Painting.class, singletonMap(Painting.PAINTING_ID_PK_COLUMN, 4));
+		QueryMetadata md2 = q2.getMetaData(context.getEntityResolver());
+		assertNotNull(md2);
+		assertNotNull(md2.getCacheKey());
+
+		// this query is just a different form of q1, so should hit the same
+		// cache entry
+		assertEquals(md1.getCacheKey(), md2.getCacheKey());
+
+		SelectById<Painting> q3 = SelectById.query(Painting.class, 5);
+		QueryMetadata md3 = q3.getMetaData(context.getEntityResolver());
+		assertNotNull(md3);
+		assertNotNull(md3.getCacheKey());
+		assertNotEquals(md1.getCacheKey(), md3.getCacheKey());
+
+		SelectById<Artist> q4 = SelectById.query(Artist.class, 4);
+		QueryMetadata md4 = q4.getMetaData(context.getEntityResolver());
+		assertNotNull(md4);
+		assertNotNull(md4.getCacheKey());
+		assertNotEquals(md1.getCacheKey(), md4.getCacheKey());
+
+		SelectById<Painting> q5 = SelectById.query(Painting.class, new ObjectId("Painting",
+				Painting.PAINTING_ID_PK_COLUMN, 4));
+		QueryMetadata md5 = q5.getMetaData(context.getEntityResolver());
+		assertNotNull(md5);
+		assertNotNull(md5.getCacheKey());
+
+		// this query is just a different form of q1, so should hit the same
+		// cache entry
+		assertEquals(md1.getCacheKey(), md5.getCacheKey());
+	}
+
+	public void testLocalCache() throws Exception {
+		createTwoArtists();
+
+		final Artist[] a3 = new Artist[1];
+
+		assertEquals(1, interceptor.runWithQueryCounter(new UnitTestClosure() {
+
+			@Override
+			public void execute() {
+				a3[0] = SelectById.query(Artist.class, 3).useLocalCache("g1").selectOne(context);
+				assertNotNull(a3[0]);
+				assertEquals("artist3", a3[0].getArtistName());
+			}
+		}));
+
+		interceptor.runWithQueriesBlocked(new UnitTestClosure() {
+
+			@Override
+			public void execute() {
+				Artist a3cached = SelectById.query(Artist.class, 3).useLocalCache("g1").selectOne(context);
+				assertSame(a3[0], a3cached);
+			}
+		});
+
+		context.performGenericQuery(new RefreshQuery("g1"));
+
+		assertEquals(1, interceptor.runWithQueryCounter(new UnitTestClosure() {
+
+			@Override
+			public void execute() {
+				SelectById.query(Artist.class, 3).useLocalCache("g1").selectOne(context);
+			}
+		}));
 	}
 }
